(library
 (name mac_virt)
 (libraries core core_unix core_unix.filename_unix)
 (inline_tests)
 (preprocess
  (pps ppx_jane))
 (foreign_stubs
  (language c)
  (names vz_stubs)
  (flags
   (-x objective-c -fobjc-arc)))
 (c_library_flags
  (-framework Virtualization -framework Foundation -framework AppKit)))
